--- a/public/common/styles.css
+++ b/public/common/styles.css
@@ -128,6 +128,7 @@ header .main-menu{ float: right; }
 header ul.main-menu > li > a{ height: 100%; line-height: 80px; padding: 0px 15px; }
 
 
+
 /* SEARCH AREA */
 
 header .right-area{ float: right; height: 100%; line-height: 70px; margin-left: 15px; padding: 5px; }
@@ -165,7 +166,7 @@ header .menu-nav-icon{ display: inline-block; font-size: 30px; line-height: 60px
 
 header .main-menu li.drop-down{ position: relative; text-align: left; }
 
-header .main-menu li.drop-down > ul.drop-down-menu{ display: none; position: absolute; top: 60px; 
+header .main-menu li.drop-down > ul.drop-down-menu{ display: none; position: absolute; top: 60px;
 	left: 0; min-width: 180px; box-shadow: 0px 3px 10px rgba(0,0,0,.3); background: #fff; }
 
 header .main-menu li.drop-down > ul.drop-down-menu li{ display: block; border-top: 1px solid #ddd; }
@@ -177,9 +178,8 @@ header .main-menu li i{margin-left: 10px; }
 
 /* DROPDOWN HOVER */
 
-header .main-menu li.drop-down a.mouseover + ul.drop-down-menu{ display: block; 
-	animation: full-opacity-anim .2s forwards; }
-
+header .main-menu li.drop-down a:hover +  ul.drop-down-menu{ display: block;
+	animation: full-opacity-anim .2s forwards;}
 
 @keyframes full-opacity-anim{
 	0%{ opacity: 0; }
@@ -369,14 +369,14 @@ header .main-menu li.drop-down a.mouseover + ul.drop-down-menu{ display: block;
 
 .img-bg{ position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 1; }
 
-.bg-map{ background: url(../../src/assets/images/banner-1-600x450.jpg); background-size: cover;}
+.bg-map{ background: url(../images/banner-1-600x450.jpg); background-size: cover;}
 
-.bg-1{ background: url(../../src/assets/images/slider-1-1200x900.jpg) no-repeat center; background-size: cover; }
-.bg-2{ background: url(../../src/assets/images/slider-2-450x600.jpg) no-repeat center; background-size: cover; }
-.bg-3{ background: url(../../src/assets/images/slider-3-450x600.jpg) no-repeat center; background-size: cover; }
-.bg-4{ background: url(../../src/assets/images/slider-4-450x600.jpg) no-repeat center; background-size: cover; }
-.bg-5{ background: url(../../src/assets/images/slider-5-450x600.jpg) no-repeat center; background-size: cover; }
-.bg-6{ background: url(../../src/assets/images/slider-6-450x600.jpg) no-repeat center; background-size: cover; }
+.bg-1{ background: url(../images/slider-1-1200x900.jpg) no-repeat center; background-size: cover; }
+.bg-2{ background: url(../images/slider-2-450x600.jpg) no-repeat center; background-size: cover; }
+.bg-3{ background: url(../images/slider-3-450x600.jpg) no-repeat center; background-size: cover; }
+.bg-4{ background: url(../images/slider-4-450x600.jpg) no-repeat center; background-size: cover; }
+.bg-5{ background: url(../images/slider-5-450x600.jpg) no-repeat center; background-size: cover; }
+.bg-6{ background: url(../images/slider-6-450x600.jpg) no-repeat center; background-size: cover; }
 
 
 .bg-grad-layer-6:after{ content:''; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: -1;
